# jb-navbar-bug

./: README.md  pyproject.toml
docs/: _config.yml
docs/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree
docs/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  search.html  searchindex.js
docs/_build/jupyter_execute/: markdown-notebooks.ipynb
docs/_templates/: mybutton.html
