[tool.poetry]
name = "jb-navbar-bug"
version = "0.0.1"
description = ""
authors = [ "Alissa Huskey <alissa.huskey@gmail.com>",]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0"
jupyter-book = "^1.0.4.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pdbpp = "^0.10.3"
black = "^25.1.0"
pynvim = "^0.5.2"
pycodestyle = "^2.13.0"
flake8 = "^7.2.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.1.2"
flake8-docstrings = "^1.7.0"
pylama = "^8.4.1"
ipython = "^9.0.2"
ruff = "^0.11.3"

[tool.black]
line-length = "88"

[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"
